--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <img src="../media/img/logo2.svg" alt="Logo SVG" width="20%">
         <h1>Hoja de Vida</h1>
         <h2>Steven Jobs</h2>
         <h3>Datos Personales</h3>
